made whole nav buttons clickable

--- a/csv/html-templates/header2.html
+++ b/csv/html-templates/header2.html
@@ -1,14 +1,14 @@
 <nav>
   <div id="navcontents">
-    <p>Welcome</p>
+    <p>Welcome Traveler</p>
     <div id="image">
       <img id="logo" src="https://raw.githubusercontent.com/sysadminsmedia/homebox/refs/heads/main/docs/public/lilbox.svg">
     </div>
 
     <ul>
-      <li><a href="output2.csv" target="_blank">download result</a></li><br>
-      <li><a href="input.csv">download last export from homebox (.csv)</a></li><br>
-      <li><a href="https://github.com/101br03k/docker-homebox-warrenty" target="_blank">source code</a></li><br>
+      <div id="ul_center"><a href="output2.csv" target="_blank"><li>download result (.csv)</li></a></div><br>
+      <div id="ul_center"><a href="input.csv"><li>download last export from homebox (.csv)</li></a></div><br>
+      <div id="ul_center"><a href="https://github.com/101br03k/docker-homebox-warrenty" target="_blank"><li>source code</li></a></div><br>
     </ul>
   </div>
 </nav>
