added extra counter

--- a/csv/html-templates/header5.html
+++ b/csv/html-templates/header5.html
@@ -1,3 +1,3 @@
 </p></div>
-      <div id="spacing-lr"></div>
-    </div>
+      <div id="spacing"></div>
+      <div id="counter"><p id="text">Amount of something:</p><p id="amount">
